--- a/Practice01/src/style/index.css
+++ b/Practice01/src/style/index.css
@@ -15,13 +15,13 @@ body {
     background-repeat: no-repeat;
     height: 1485px;
     background-size: 100% 57%;
-    margin-bottom: 20px;
+    margin-bottom: 35px;
 }
 
 .header {
     display: flex;
     align-items: center;
-    height: 125px;
+    height: 155px;
     justify-content: space-evenly;
     width: 1440px;
     margin: auto;
@@ -32,7 +32,7 @@ body {
 }
 
 .header__nav {
-    margin-right: 22px;
+    margin-right: 26px;
 }
 
 .header__nav-list {
@@ -65,7 +65,7 @@ body {
     width: 92px;
     height: 24px;
     cursor: pointer;
-    margin-left: 25px;
+    margin-left: 24px;
 }
 
 nav li:hover {
@@ -122,7 +122,7 @@ a.active {
 .banner__discount {
     display: flex;
     justify-content: center;
-    height: 95px;
+    height: 82px;
     width: 100%;
     align-items: flex-end;
 }
@@ -140,7 +140,7 @@ a.active {
     font-weight: 400;
     line-height: 16px;
     cursor: pointer;
-    margin-left: -12px
+    margin-left: -12px;
 }
 
 .banner__save {
@@ -152,7 +152,6 @@ a.active {
     color: var(--white);
     z-index: 1;
     position: sticky;
-    margin-left: 2px;
 }
 
 .banner__save p,
@@ -203,12 +202,12 @@ a.active {
     display: flex;
     justify-content: center;
     margin: -2px 0px 0px -12px;
-    height: 63px;
+    height: 60px;
 }
 
 .text-box {
     width: 320px;
-    height: 48px;
+    height: 45px;
     border-radius: 4px 0px 0px 4px;
     background-color: var(--white);
     border: 1px solid #E1E5EA;
@@ -225,12 +224,12 @@ a.active {
 
 .submit {
     width: 166px;
-    height: 52px;
+    height: 49px;
     border-radius: 0px 4px 4px 0px;
     border: 1px;
     background-color: var(--Violet);
     color: var(--white);
-    margin-left: -10px;
+    margin-left: -12px;
     cursor: pointer;
     font-size: 16px;
     font-weight: 500;
@@ -386,13 +385,14 @@ button:hover {
     width: 368px;
     height: 128px;
     border-radius: 0px 8px 8px 0px;
+    margin-top: -1px;
 }
 
 .product__content {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    gap: 24px;
+    gap: 22px;
     margin-left: 5px;
 }
 
@@ -404,12 +404,16 @@ button:hover {
 .ad-feature p,
 .ad-feature-title {
     margin-left: 33px;
-    margin-top: 1px;
 }
 
-.survey-feature-title,
+.survey-feature-title {
+    margin-top: -5px;
+    margin-bottom: 5px;
+}
+
 .survey-feature p {
     margin-left: 24px;
+
 }
 
 .survey-feature,
@@ -457,7 +461,7 @@ h2 {
     justify-content: space-around;
     width: 1440px;
     margin: auto;
-    margin-bottom: 51px;
+    margin-bottom: 52px;
 }
 
 .functions__headline {
