fix code with perfect pixel & update variles.css

--- a/Practice01/src/style/abstracts/varibles.css
+++ b/Practice01/src/style/abstracts/varibles.css
@@ -6,4 +6,13 @@
     --Violet: #794CFF;
     --River-Bed: #4E5A65;
     --Blue-Chalk: #ECE5FF;
+    --Perano: #B4AEF6;
+    --White-Lilac: #F6F3FC;
+    --Cornflower-Blue: #796EFF;
+    --Mischka: #D9DBE1;
+    --Sushi: #81C43B;
+    --Chrome-White: #DCECCB;
+    --Athens-Gray: #E1E5EA;
+    --Gull-Gray: #97A5B5;
+    --Frost: #F2F9EB;
   }
