--- a/Practice01/src/style/index.css
+++ b/Practice01/src/style/index.css
@@ -4,31 +4,37 @@
 
 
 body {
-    font-family: 'Inter', sans-serif;
     color: var(--Limed-Spruce);
+    font-family: 'Inter', sans-serif;
 }
 
 .banner {
     background-image: url(../assets/image/bgbanner.png);
-    border: 1px;
-    margin-top: -9px;
     background-repeat: no-repeat;
-    height: 1485px;
     background-size: 100% 57%;
+    border: 1px;
+    height: 1485px;
+    margin-top: -9px;    
     margin-bottom: 37px;
 }
 
 .header {
-    display: flex;
-    align-items: center;
-    height: 158px;
     justify-content: space-evenly;
+    align-items: center;
     width: 1440px;
+    height: 158px;
     margin: auto;
+    display: flex;
 }
 
 .container {
     width: 1440px;
+}
+
+.header__logo {
+    width: 92px;
+    height: 24px;
+    margin-left: 24px;
 }
 
 .header__nav {
@@ -36,36 +42,22 @@ body {
 }
 
 .header__nav-list {
-    margin-left: 50px;
-    margin-bottom: 4px;
-    display: flex;
     align-items: center;
     gap: 23px;
+    margin-bottom: 4px;
+    margin-left: 50px;
+    display: flex;
 }
 
 .header__nav-list li {
     color: var(--Limed-Spruce);
+    opacity: 0.7;
+    cursor: pointer;
+    margin-top: 8px;
+    margin-right: 10px;
     font-size: 16px;
     font-weight: 400;
-    opacity: 0.7;
     line-height: 16px;
-    cursor: pointer;
-    margin-right: 10px;
-    margin-top: 8px;
-}
-
-.header__logo {
-    color: var(--Ebony-Clay);
-    font-size: 24px;
-    font-family: Josefin Sans;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 24px;
-    letter-spacing: -1.44px;
-    width: 92px;
-    height: 24px;
-    cursor: pointer;
-    margin-left: 24px;
 }
 
 nav li:hover {
@@ -81,17 +73,17 @@ nav li:hover {
 }
 
 .header__login-get-free a {
-    text-decoration: none;
     color: var(--Limed-Spruce);
+    opacity: 0.7;
+    margin-left: 16px;
     font-size: 16px;
     font-weight: 400;
-    opacity: 0.7;
     line-height: 16px;
-    margin-left: 16px;
+    text-decoration: none;
 }
 
 .header__login-get-free a.active:hover {
-    background-color: #b4aef6;
+    background-color: var(--Perano);
 }
 
 .header__login-get-free a :hover {
@@ -102,12 +94,12 @@ a.active {
     background-color: var(--Blue-Chalk);
     color: var(--Violet);
     text-align: center;
+    margin-right: 32px;
+    padding: 15px 29px;
     font-size: 16px;
     font-style: normal;
     font-weight: 500;
     line-height: 16px;
-    padding: 15px 29px;
-    margin-right: 32px;
 }
 
 .active {
@@ -117,46 +109,49 @@ a.active {
 }
 
 .banner__sign-up {
-    align-items: center;
-    justify-content: center;
-    display: flex;
     flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    display: flex;
 }
 
 .banner__discount {
-    display: flex;
     justify-content: center;
-    height: 79px;
-    width: 100%;
     align-items: flex-end;
-    margin-right: 28px;
-}
-
-.banner__get-acc {
-    width: 162px;
-    height: 32px;
-    border-radius: 0px 100px 100px 0px;
-    background-color: #F2F9EB;
-    text-align: center;
-    color: #35414B;
-    font-size: 16px;
-    font-family: 'Inter', sans-serif;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 16px;
-    cursor: pointer;
+    width: 100%;
+    height: 80px;
+    margin-right: 7px;
+    display: flex;
 }
 
 .banner__save {
+    text-align: center;
+    color: var(--white);
+    z-index: 1;
+    background-color: var(--Sushi);
     border-radius: 100px;
     width: 106px;
     height: 33px;
-    text-align: center;
-    background-color: #81C43B;
-    color: var(--white);
-    z-index: 1;
     position: sticky;
 }
+
+.banner__get-acc {
+    background-color: var(--Frost);
+    text-align: center;
+    color: var(--Limed-Spruce);
+    cursor: pointer;
+    border-radius: 0 100px 100px 0;
+    width: 198px;
+    height: 32px;
+    margin-left: -15px;
+    font-family: Inter, sans-serif;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 16px;
+}
+
+
 
 .banner__save p,
 .banner__get-acc p {
@@ -164,31 +159,31 @@ a.active {
 }
 
 .banner__get-acc p:hover {
-    background: #dceccb;
+    background: var(--Chrome-White);
     width: 209px;
     height: 25px;
     border-radius: 0px 100px 100px 0px;
 }
 
 .banner__content {
-    display: flex;
-    justify-content: center;
     flex-direction: column;
+    justify-content: center;
     align-items: center;
+    gap: 23px;
     height: 267px;
-    gap: 23px
+    display: flex;
 }
 
 .banner__heading {
     color: var(--Limed-Spruce);
-    font-family: 'Inter', sans-serif;
     text-align: center;
-    font-weight: 700;
-    font-size: 65px;
-    line-height: 70px;
     width: 830px;
     height: 144px;
     margin-right: 20px;
+    font-family: Inter, sans-serif;
+    font-size: 65px;
+    font-weight: 700;
+    line-height: 70px;
 }
 
 .banner__simple-text {
@@ -196,27 +191,27 @@ a.active {
     color: var(--River-Bed);
     width: 508px;
     height: 48px;
+    margin-bottom: 2px;
     margin-right: 23px;
     font-family: 'Inter', sans-serif;
     font-size: 17px;
     font-weight: 400;
     line-height: 25px;
-    margin-bottom: 2px;
 }
 
 .banner__box {
-    display: flex;
     justify-content: center;
-    margin: -4px 0px 0px -12px;
     height: 60px;
+    margin: -4px 0 0 -12px;
+    display: flex;
 }
 
 .text-box {
+    background-color: var(--white);
+    border: 1px solid var(--Athens-Gray);
+    border-radius: 4px 0 0 4px;
     width: 320px;
     height: 48px;
-    border-radius: 4px 0px 0px 4px;
-    background-color: var(--white);
-    border: 1px solid #E1E5EA;
 }
 
 ::placeholder {
@@ -224,37 +219,37 @@ a.active {
     font-weight: 400;
     font-size: 16px;
     line-height: 16px;
-    color: #97A5B5;
+    color: var(--Gull-Gray);
     padding: 18px 99px 18px 22px;
 }
 
 .submit {
-    width: 166px;
-    height: 52px;
-    border-radius: 0px 4px 4px 0px;
-    border: 1px;
     background-color: var(--Violet);
     color: var(--white);
-    margin-left: -12px;
     cursor: pointer;
+    letter-spacing: 0;
+    text-align: center;
+    border: 1px;
+    border-radius: 0 4px 4px 0;
+    width: 166px;
+    height: 52px;
+    margin-left: -12px;
     font-size: 16px;
     font-weight: 500;
     line-height: 16px;
-    letter-spacing: 0em;
-    text-align: center;
 }
 
 .submit:hover,
 button:hover {
-    background-color: #b4aef6;
+    background-color: var(--Perano);
 }
 
 .graph {
-    display: flex;
     justify-content: center;
     width: 1000px;
     height: 734.29px;
     margin-right: 10px;
+    display: flex;
 }
 
 .graph-img {
@@ -263,37 +258,37 @@ button:hover {
 }
 
 .banner__media-logo {
-    justify-content: center;
-    display: flex;
     flex-direction: column;
-    height: 190px;
+    justify-content: center;
     width: 1440px;
+    height: 190px;
+    display: flex;
 }
 
 .banner__media-logo p {
-    font-family: 'Inter', sans-serif;
-    font-size: 16px;
-    line-height: 16px;
     text-align: center;
     color: var(--River-Bed);
-    font-weight: 400;
-    letter-spacing: 0em;
+    letter-spacing: 0;
     margin-left: -10px;
+    font-family: Inter, sans-serif;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 16px;
 }
 
 .banner__media-logo b {
+    letter-spacing: 0;
+    text-align: center;
     font-size: 16px;
     font-weight: 700;
     line-height: 16px;
-    letter-spacing: 0em;
-    text-align: center;
 }
 
 .banner__logo {
-    width: 1342px;
-    display: flex;
     justify-content: space-evenly;
-    margin-top: 22px;
+    width: 1342px;
+    margin-top: 23px;
+    display: flex;
 }
 
 .gg {
@@ -311,7 +306,7 @@ button:hover {
 }
 
 .air img {
-    margin-left: 63px;
+    margin-left: 62px;
 }
 
 .fb {
@@ -362,11 +357,26 @@ button:hover {
 .product {
     background-image: url(../assets/image/bgintro.png);
     background-repeat: round;
-    height: 641px;
-    display: flex;
     justify-content: center;
     align-items: center;
     gap: 74px;
+    height: 641px;
+    display: flex;
+}
+
+.timeline {
+    border-radius: 4px;
+    width: 657px;
+    height: 518px;
+    margin-left: 4px;
+}
+
+.product__content {
+    flex-direction: column;
+    justify-content: center;
+    gap: 22px;
+    margin-left: 5px;
+    display: flex;
 }
 
 .survey-feature p,
@@ -378,28 +388,13 @@ button:hover {
     line-height: 24px;
 }
 
-.timeline {
-    width: 657px;
-    height: 518px;
-    border-radius: 4px;
-    margin-left: 4px;
-}
-
 .survey-feature {
-    background-color: #f6f3fc;
+    background-color: var(--White-Lilac);
     border-left: 8px solid var(--Violet);
     width: 368px;
     height: 128px;
     border-radius: 0px 8px 8px 0px;
-    margin-bottom: px;
-}
 
-.product__content {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    gap: 22px;
-    margin-left: 5px;
 }
 
 .ad-feature p,
@@ -437,10 +432,8 @@ button:hover {
 
 .survey-feature-title,
 .ad-feature-title {
-    color: #35414B;
     font-size: 18px !important;
     font-family: 'Inter', sans-serif;
-    font-style: normal;
     font-weight: 600 !important;
     line-height: 26px !important;
     margin-bottom: 1px;
@@ -451,76 +444,130 @@ button:hover {
     margin-left: 17px;
 }
 
+.functions {
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    width: 1440px;
+    height: 648px;
+    margin: auto auto 52px;
+    display: flex;
+}
+
 h2 {
     font-family: 'Inter', sans-serif;
     font-weight: 600;
     font-size: 40px;
     line-height: 40px;
-    margin-left: px;
     color: var(--Limed-Spruce);
     font-style: normal;
 }
 
-.functions {
-    display: flex;
-    flex-direction: column;
-    height: 648px;
-    align-items: center;
-    justify-content: space-around;
-    width: 1440px;
-    margin: auto;
-    margin-bottom: 52px;
+.feature-img {
+    margin-top: 19px;
+}
+
+.feature-text {
+    margin-top: 10px;
 }
 
 .functions__headline {
-    margin-top: 97px;
+    margin-top: 94px;
     margin-right: 17px;
 }
 
 .feature {
-    display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
-    margin-left: 79px;
-    margin-top: 12px;
+    margin-top: 31px;
     margin-bottom: 3px;
+    margin-left: 68px;
+    display: flex;
 }
 
 .feature__descripstion {
     width: 23%;
+    margin: 2px 10px 2px 0;
+    padding: 17px;
     display: inline-block;
-    padding: 36px;
-    margin: 2px 10px 3px 2px;
 }
 
 .feature__descripstion img {
-    margin-bottom: 15px;
+    margin-bottom: -25px;
+    margin-top: 1px;
 }
 
 .feature__descripstion p {
-    font-family: 'Inter', sans-serif;
-    font-weight: 400px;
-    font-size: 16px;
-    line-height: 24px;
     color: var(--River-Bed);
-    margin: 6px 0px 0px 0px;
+    margin: 9px 0 0 1px;
+    font-family: 'Inter', sans-serif;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 24px;
 }
 
-h4 {
+.feature__descripstion h4 {
+    color: var(--Limed-Spruce);
+    margin-top: 45px;
     font-family: 'Inter', sans-serif;
-    font-size: 18px !important;
     font-weight: 600;
     line-height: 18px;
-    color: var(--Limed-Spruce);
+    font-size: 18px !important;
 }
 
 .charts {
     background-image: url(../assets/image/bgcharts.png);
-    height: 541px;
-    display: flex;
     justify-content: center;
     align-items: center;
     gap: 88px;
+    height: 541px;
+    display: flex;
+}
+
+.chart__content {
+    flex-direction: column;
+    gap: 25px;
+    margin-top: 2px;
+    margin-bottom: 5px;
+    margin-left: 14px;
+    display: flex;
+}
+
+.chart__content h2 {
+    text-align: left;
+    width: 341px;
+    height: 96px;
+    margin-left: -8px;
+    font-family: Inter, sans-serif;
+    font-size: 40px;
+    font-weight: 600;
+    line-height: 48px;
+}
+
+.chart__content p {
+    color: var(--River-Bed);
+    width: 413px;
+    height: 72px;
+    margin-left: -8px;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 24px;
+}
+
+button {
+    background-color: var(--Cornflower-Blue);
+    color: var(--white);
+    cursor: pointer;
+    border: none;
+    border-radius: 4px;
+    width: 164px;
+    height: 52px;
+    margin-top: 5px;
+    margin-left: -8px;
+    padding-top: 4px;
+    padding-left: 0;
+    font-size: 16px;
 }
 
 .chart-image {
@@ -528,103 +575,65 @@ h4 {
     margin-right: 28px;
 }
 
-.chart__content {
-    display: flex;
-    flex-direction: column;
-    gap: 25px;
-    margin-top: 2px;
-    margin-left: 14px;
-    margin-bottom: 5px;
-}
-
-.chart__content h2 {
-    width: 341px;
-    height: 96px;
-    font-family: 'Inter', sans-serif;
-    font-size: 40px;
-    font-weight: 600;
-    line-height: 48px;
-    text-align: left;
-    margin-left: -8px;
-}
-
-.chart__content p {
-    width: 413px;
-    height: 72px;
-    line-height: 24px;
-    color: var(--River-Bed);
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 400;
-    margin-left: -8px;
-}
-
-button {
-    width: 164px;
-    height: 52px;
-    border-radius: 4px;
-    background-color: #796EFF;
-    color: var(--white);
-    font-size: 16px;
-    border: none;
-    cursor: pointer;
-    padding-top: 4px;
-    padding-left: 0px;
-    margin-top: 5px;
-    margin-left: -8px;
-}
-
 .about-us {
-    width: 100%;
-    height: 786px;
-    display: flex;
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
     gap: 6px;
+    width: 100%;
+    height: 786px;
+    display: flex;
 }
 
 .about-us__content {
-    display: flex;
     flex-direction: column;
+    justify-content: center;
     align-items: center;
     gap: 50px;
-    justify-content: center;
     margin-top: 60px;
+    display: flex;
 }
 
 .about-us__content h2 {
+    text-align: center;
     width: 394px;
     height: 96px;
-    line-height: 48px;
     margin-top: 40px;
-    text-align: center;
     margin-right: 14px;
+    line-height: 48px;
 }
 
 .about-us__content p {
+    text-align: center;
     width: 543px;
     height: 96px;
-    font-weight: 400;
-    font-size: 18px;
-    line-height: 32px;
-    text-align: center;
-    margin-left: 15px;
     margin-top: -2px;
+    margin-left: 15px;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 32px;
 }
 
 .customers-feedbacks {
-    display: flex;
-    height: 126px;
     gap: 90px;
+    height: 126px;
     margin-bottom: 62px;
     margin-left: 10px;
+    display: flex;
+}
+
+.customer-pro {
+    cursor: pointer;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    display: flex;
 }
 
 .baseline {
     width: 264px;
     height: 4px;
-    margin-top: 2px;
+    margin-top: 4px;
 }
 
 .baseline--visibility-hidden {
@@ -641,19 +650,12 @@ button {
     height: 48px;
 }
 
-.customer-pro {
-    display: flex;
-    cursor: pointer;
-    flex-direction: column;
-    justify-content: space-around;
-    align-items: center;
-}
+
 
 .customer-infor {
-    margin-bottom: 6px;
     align-items: center;
-    display: flex;
     margin-right: 34px;
+    display: flex;
 }
 
 .name-job {
@@ -682,31 +684,31 @@ button {
 
 .install-section {
     background-image: url(../assets/image/install-section.png);
+    border-radius: 16px;
+    justify-content: space-around;
+    align-items: center;
     width: 1111px;
     height: 224px;
-    border-radius: 16px;
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
     margin-right: 11px;
+    display: flex;
 }
 
 h3 {
-    font-family: 'Inter', sans-serif;
-    font-weight: 600;
-    font-size: 32px;
-    line-height: 48px;
     color: var(--white);
-    margin-left: 12px;
-    margin-top: 2px;
     width: 423px;
     height: 96px;
+    margin-top: 2px;
+    margin-left: 12px;
+    font-family: Inter, sans-serif;
+    font-size: 32px;
+    font-weight: 600;
+    line-height: 48px;
 }
 
 .install-app {
-    display: flex;
     gap: 20px;
     margin-right: 10px;
+    display: flex;
 }
 
 .app-store {
@@ -724,24 +726,24 @@ h3 {
 }
 
 footer {
-    width: 100%;
-    height: 417px;
     background-color: var(--Ebony-Clay);
-    margin-top: 100px;
-    display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    width: 100%;
+    height: 417px;
+    margin-top: 102px;
+    display: flex;
 }
 
 .footer__content {
-    display: flex;
     flex-flow: row;
     justify-content: space-evenly;
+    width: 1340px;
+    height: 280px;
     margin-top: 82px;
     margin-right: 90px;
-    height: 280px;
-    width: 1340px;
+    display: flex;
 }
 
 .company ul,
@@ -795,12 +797,12 @@ footer {
 }
 
 .footer__content p {
-    font-family: 'Inter', sans-serif;
-    font-weight: 600;
-    font-size: 16px;
-    line-height: 16px;
     color: var(--white);
     margin-bottom: 24px;
+    font-family: Inter, sans-serif;
+    font-size: 16px;
+    font-weight: 600;
+    line-height: 16px;
 }
 
 .footer__gg-play {
@@ -821,27 +823,27 @@ footer {
 
 .line-footer {
     border: 0.1px solid var(--white);
-    width: 100%;
     color: var(--white);
     opacity: 0.1;
+    width: 100%;
     margin-top: 5px;
 }
 
 .footer__copy-right {
-    display: flex;
     justify-content: space-around;
+    display: flex;
 }
 
 .copy-right {
+    color: var(--Mischka);
     width: 577px;
     height: 14px;
-    color: #D9DBE1;
+    margin-top: 34px;
+    margin-left: 3px;
     font-size: 15px;
     font-style: normal;
     font-weight: 400;
     line-height: 14px;
-    margin-top: 34px;
-    margin-left: 3px;
 }
 
 .social-icon {
