--- a/Practice01/src/style/sass/abstracts/_variables.scss
+++ b/Practice01/src/style/sass/abstracts/_variables.scss
@@ -1,7 +1,7 @@
 :root {
-    --white: #FFF;
+    --primary: #FFF;
+    --second: #35414B; 
     --black: #000;
-    --Limed-Spruce: #35414B;
     --Ebony-Clay: #1D2830;
     --Violet: #794CFF;
     --River-Bed: #4E5A65;
