mobile first: header & banner

--- a/Practice01/src/style/sass/layout/_footer.scss
+++ b/Practice01/src/style/sass/layout/_footer.scss
@@ -40,6 +40,7 @@ footer {
 .company ul li a,
 .support ul li a,
 .legal ul li a {
+    font-family: 'Inter', sans-serif;
     text-decoration: none;
     color: var(--primary);
     font-weight: 400;
