--- a/Practice01/src/style/sass/components/_customer-feedbacks.scss
+++ b/Practice01/src/style/sass/components/_customer-feedbacks.scss
@@ -49,6 +49,7 @@
 
 .name,
 .job {
+    font-family: 'Inter', sans-serif;
     font-size: 16px;
     line-height: 16px;
     color: var(--River-Bed);
