--- a/Practice01/src/style/sass/components/_product-feature.scss
+++ b/Practice01/src/style/sass/components/_product-feature.scss
@@ -5,6 +5,7 @@
     font-style: normal;
     font-weight: 400;
     line-height: 24px;
+    font-family: "Inter", sans-serif;
 }
 
 .survey-feature {
