--- a/Practice01/src/style/sass/index.css
+++ b/Practice01/src/style/sass/index.css
@@ -1,30 +1,8 @@
-body {
-  color: var(--Limed-Spruce);
-  font-family: "Inter", sans-serif;
-  overflow-x: hidden;
-}
 
-::-moz-placeholder {
-  font-family: "Inter", sans-serif;
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 16px;
-  color: #97A5B5;
-  padding: 18px 99px 18px 2px;
-}
-
-::placeholder {
-  font-family: "Inter", sans-serif;
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 16px;
-  color: #97A5B5;
-  padding: 18px 99px 18px 2px;
-}
 
 :root {
   --primary: #FFF;
-  --second: #35414B;
+  --second: #35414B; 
   --black: #000;
   --Ebony-Clay: #1D2830;
   --Violet: #794CFF;
@@ -32,352 +10,11 @@ body {
   --Perano: #B4AEF6;
 }
 
-html,
-body,
-div,
-span,
-applet,
-object,
-iframe,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p,
-blockquote,
-pre,
-a,
-abbr,
-acronym,
-address,
-big,
-cite,
-code,
-del,
-dfn,
-em,
-img,
-ins,
-kbd,
-q,
-s,
-samp,
-small,
-strike,
-strong,
-sub,
-sup,
-tt,
-var,
-b,
-u,
-i,
-center,
-dl,
-dt,
-dd,
-ol,
-ul,
-li,
-fieldset,
-form,
-label,
-legend,
-table,
-caption,
-tbody,
-tfoot,
-thead,
-tr,
-th,
-td,
-article,
-aside,
-canvas,
-details,
-embed,
-figure,
-figcaption,
-footer,
-header,
-hgroup,
-menu,
-nav,
-output,
-ruby,
-section,
-summary,
-time,
-mark,
-audio,
-video {
-  margin: 0;
-  padding: 0;
-  border: 0;
-  font-size: 100%;
-  font: inherit;
-  vertical-align: baseline;
-}
-
-/* HTML5 display-role reset for older browsers */
-article,
-aside,
-details,
-figcaption,
-figure,
-footer,
-header,
-hgroup,
-menu,
-nav,
-section {
-  display: block;
-}
-
-ol,
-ul {
-  list-style: none;
-}
-
-blockquote,
-q {
-  quotes: none;
-}
-
-blockquote:before,
-blockquote:after,
-q:before,
-q:after {
-  content: "";
-  content: none;
-}
-
-table {
-  border-collapse: collapse;
-  border-spacing: 0;
-}
-
-@font-face {
-  font-family: "Inter", sans-serif;
-  src: url(../../fonts/static/Inter-Regular.ttf);
-}
-.customers-feedbacks {
-  gap: 90px;
-  height: 126px;
-  margin-bottom: 62px;
-  margin-left: 10px;
-  display: flex;
-}
-
-.customer-pro {
-  cursor: pointer;
-  flex-direction: column;
-  justify-content: space-around;
-  align-items: center;
-  display: flex;
-}
-
-.baseline {
-  width: 264px;
-  height: 4px;
-  margin-top: 2px;
-}
-
-.baseline--visibility-hidden {
-  visibility: hidden;
-}
-
-.baseline img {
-  width: 100%;
-  height: 100%;
-}
-
-.customer-ava {
-  width: 48px;
-  height: 48px;
-}
-
-.customer-infor {
-  align-items: center;
-  margin-right: 33px;
-  margin-bottom: px;
-  display: flex;
-}
-
-.name-job {
-  margin-left: 16px;
-  margin-bottom: 6px;
-}
-
-.name,
-.job {
-  font-size: 16px;
-  line-height: 16px;
-  color: var(--River-Bed);
-}
-
-.name {
-  font-weight: 600;
-  margin-right: 7px;
-  margin-top: 3px;
-}
-
-.job {
-  font-weight: 400;
-  margin-top: 7px;
-  margin-left: 0px;
-}
-
-.feature {
-  flex-wrap: wrap;
-  justify-content: space-evenly;
-  margin-top: 31px;
-  margin-bottom: 3px;
-  margin-left: 68px;
-  display: flex;
-}
-
-.feature-img {
-  margin-top: 19px;
-}
-
-.feature__descripstion {
-  width: 23%;
-  margin: 2px 10px 2px 0;
-  padding: 17px;
-  display: inline-block;
-}
-
-.feature__descripstion img {
-  margin-bottom: -25px;
-  margin-top: 1px;
-}
-
-.feature__descripstion p {
-  color: var(--River-Bed);
-  margin: 9px 0 0 1px;
-  font-family: "Inter", sans-serif;
-  font-size: 16px;
-  font-weight: 400;
-  line-height: 24px;
-}
-
-.feature__descripstion h4 {
-  color: var(--Limed-Spruce);
-  margin-top: 45px;
-  font-family: "Inter", sans-serif;
-  font-weight: 600;
-  line-height: 18px;
-  font-size: 18px !important;
-}
-
-.survey-feature p,
-.ad-feature p {
-  color: var(--River-Bed);
-  font-size: 16px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 24px;
-}
-
-.survey-feature {
-  background-color: #F6F3FC;
-  border-left: 8px solid var(--Violet);
-  width: 368px;
-  height: 128px;
-  border-radius: 0px 8px 8px 0px;
-  margin-top: 2px;
-}
-
-.ad-feature p,
-.survey-feature p {
-  width: 308px;
-}
-
-.ad-feature p,
-.ad-feature h4 {
-  margin-left: 33px;
-}
-
-.survey-feature h4 {
-  margin-top: 5px;
-  margin-left: 24px;
-}
-
-.survey-feature p {
-  margin-left: 24px;
-  margin-top: 6px;
-}
-
-.text {
-  transform: translateY(35%);
-  margin-top: -10px;
-}
-
-.survey-feature h4,
-.ad-feature h4 {
-  font-size: 18px;
-  font-family: "Inter", sans-serif;
-  font-weight: 600;
-  line-height: 26px;
-  margin-bottom: 1px;
-}
-
-.line {
-  margin-top: 27px;
-  margin-left: 17px;
-}
-
-.banner__logo {
-  justify-content: space-evenly;
-  width: 1342px;
-  margin-top: 23px;
-  display: flex;
-}
-
-.gg {
-  width: 80px;
-  height: 26.11px;
-}
-
-.air {
-  width: 80px;
-  height: 24.96px;
-}
-
-.fb {
-  width: 77.17px;
-  height: 15.82px;
-  margin-top: 4px;
-}
-
-.hub {
-  width: 80px;
-  height: 23.3px;
-  margin-top: 2px;
-}
-
-.slack {
-  width: 80px;
-  height: 20.24px;
-  margin-top: 3px;
-}
-
-.gg,
-.air,
-.fb,
-.hub,
-.slack img {
-  cursor: pointer;
-}
-
 .header {
-  justify-content: space-evenly;
+  justify-content: space-between;
   align-items: center;
-  width: 1440px;
-  height: 158px;
+  width: 414px;
+  height: 54px;
   margin: auto;
   display: flex;
 }
@@ -391,81 +28,57 @@ table {
 }
 
 .header__nav {
+  display: none;
   margin-left: 32px;
   margin-top: 10px;
 }
 
 .header__nav-list {
-  align-items: center;
-  gap: 23px;
-  margin-bottom: 4px;
-  margin-left: 50px;
-  display: flex;
-}
-
-.header__nav-list li a {
-  color: var(--Limed-Spruce);
-  opacity: 0.7;
-  cursor: pointer;
-  margin-top: 8px;
-  margin-right: 6px;
-  font-size: 16px;
-  font-weight: 400;
-  line-height: 16px;
-  text-decoration: none;
-}
-
-.header__nav {
-  display: flex;
-}
-
-.header__login-get-free {
-  margin-top: 3px;
+  display: none;
 }
 
 .header__login-get-free a {
-  color: var(--Limed-Spruce);
-  opacity: 0.7;
-  margin-right: 15px;
-  font-size: 16px;
-  font-weight: 400;
-  line-height: 16px;
-  text-decoration: none;
-}
-
-.header-button:hover {
-  background-color: var(--Perano);
-}
-
-.header__login-get-free a :hover {
-  color: var(--black);
+  display: none;
 }
 
 .header-button {
-  background-color: #ECE5FF;
-  color: var(--Violet);
-  margin-right: 18px;
-  padding: 15px 29px;
-  font-size: 16px;
-  font-weight: 500;
-  line-height: 16px;
-  border: none;
-  height: 48px;
-  border-radius: 4px;
+  display: none;
 }
 
-nav li:hover {
-  color: black;
+.menu {
+  display: flex;
+  flex-direction: column;
+}
+
+.menu-icon {
+  margin-top: 20px;
+  margin-right: 15px;
+  background: none;
+  border: none;
+  cursor: pointer;
+}
+
+.menu p {
+  width: 24px;
+  height: 8px;
+  color: #4E5A65;
+  text-align: center;
+  font-family: 'Inter', sans-serif;
+  font-size: 8px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 8px; 
+  margin-left: 6px;
+  margin-top: 2px;
 }
 
 .banner {
   background-image: url(../../assets/image/bgbanner.png);
   background-repeat: no-repeat;
-  background-size: 100% 57%;
+  background-size: 100% 50%;
   border: 1px;
-  height: 1485px;
   margin-top: -9px;
-  margin-bottom: 37px;
+  margin-bottom: 60px;
 }
 
 .banner__sign-up {
@@ -480,100 +93,89 @@ nav li:hover {
   align-items: flex-end;
   width: 100%;
   height: 80px;
-  margin-right: 7px;
   display: flex;
 }
 
 .banner__save {
-  text-align: center;
-  color: var(--primary);
-  z-index: 1;
-  background-color: #81C43B;
-  border-radius: 100px;
-  width: 108px;
-  height: 33px;
-  position: sticky;
+  display: none;
 }
 
 .banner__get-acc {
+  width: 160px;
+  height: 21px;
   background-color: #F2F9EB;
+  color: var(--Limed-Spruce);
+  text-decoration: none;
   text-align: center;
   cursor: pointer;
-  border-radius: 0 100px 100px 0;
-  width: 198px;
-  height: 32px;
-  margin-left: -15px;
+  border-radius: 100px;
 }
 
 .banner__get-acc a {
-  font-family: Inter, sans-serif;
-  font-size: 16px;
+  background-color: #F2F9EB;
+  color: #35414B;
+  font-family: 'Inter', sans-serif;
+  font-size: 13px;
   font-style: normal;
   font-weight: 400;
-  line-height: 16px;
-  text-decoration: none;
+  line-height: 13px; 
   color: var(--Limed-Spruce);
-}
-
-.banner__save p,
-.banner__get-acc p {
-  padding: 7px 0px 0px 3px;
-}
-
-.banner__get-acc p:hover {
-  background: #DCECCB;
-  width: 198px;
-  height: 26px;
-  border-radius: 0px 100px 100px 0px;
+  text-decoration: none;
 }
 
 .banner__content {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  gap: 23px;
   height: 267px;
   display: flex;
 }
 
 .banner__heading {
+  width: 318px;
   color: var(--Limed-Spruce);
   text-align: center;
-  width: 830px;
-  height: 144px;
-  margin-right: 20px;
-  font-family: Inter, sans-serif;
-  font-size: 65px;
-  font-weight: 700;
-  line-height: 70px;
+  font-family: 'Inter', sans-serif;
+  font-size: 32px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 40px; 
 }
 
 .banner__simple-text {
   text-align: center;
   color: var(--River-Bed);
-  width: 508px;
-  height: 48px;
-  margin-bottom: 2px;
-  margin-right: 23px;
-  font-family: "Inter", sans-serif;
-  font-size: 17px;
+  text-align: center;
+  font-family: 'Inter', sans-serif;
+  font-size: 16px;
+  font-style: normal;
   font-weight: 400;
-  line-height: 25px;
+  line-height: 24px; 
+  width: 318px;
 }
 
 .banner__box {
   justify-content: center;
-  height: 60px;
-  margin: -4px 10px 0 1px;
   display: flex;
+  flex-direction: column;
+  gap: 10px;
 }
 
 .text-box {
   background-color: var(--primary);
   border: 1px solid #E1E5EA;
-  border-radius: 4px 0px 0 4px;
-  width: 320px;
-  height: 48px;
+  border-radius: 4px;
+  width: 293px;
+  height: 52px;
+}
+
+::placeholder {
+  font-family: 'Inter', sans-serif;
+  color: #97A5B5;
+  padding: 18px 45px;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 16px;
 }
 
 input[type=text] {
@@ -587,13 +189,12 @@ input[type=text] {
   letter-spacing: 0;
   text-align: center;
   border: 1px;
-  border-radius: 0 4px 4px 0;
-  width: 166px;
+  border-radius: 4px;
+  width: 318px;
   height: 52px;
   font-size: 16px;
   font-weight: 500;
   line-height: 16px;
-  margin-left: -30px;
 }
 
 .submit:hover,
@@ -603,10 +204,10 @@ input[type=text] {
 
 .graph {
   justify-content: center;
-  width: 1000px;
-  height: 734.29px;
-  margin-right: 10px;
+  width: 384px;
+  height: 273.288px;
   display: flex;
+  margin-top: 10px;
 }
 
 .graph-img {
@@ -617,8 +218,7 @@ input[type=text] {
 .banner__media-logo {
   flex-direction: column;
   justify-content: center;
-  width: 1440px;
-  height: 190px;
+  width: 414px;
   display: flex;
 }
 
@@ -626,354 +226,132 @@ input[type=text] {
   text-align: center;
   color: var(--River-Bed);
   letter-spacing: 0;
-  margin-left: -10px;
-  font-family: Inter, sans-serif;
-  font-size: 16px;
+  font-family: 'Inter', sans-serif;
+  font-size: 11px;
+  font-style: normal;
   font-weight: 400;
-  line-height: 16px;
+  line-height: 11px; 
 }
 
 .banner__media-logo b {
   letter-spacing: 0;
   text-align: center;
-  font-size: 16px;
+  color: var(--River-Bed);
+  font-family: 'Inter', sans-serif;
+  font-size: 11px;
+  font-style: normal;
   font-weight: 700;
-  line-height: 16px;
+  line-height: 11px;
+}
+
+.banner__logo {
+  justify-content: center;
+  margin-top: 10px;
+  display: flex;
+  gap: 40px;
+}
+
+.gg {
+  width: 56px;
+  height: 18.278px;
+}
+
+.air {
+  width: 56px;
+  height: 17.472px;
+}
+
+.fb {
+  width: 53.17px;
+  height: 10.902px;
+  margin-top: 4px;
+}
+
+.hub {
+  width: 56px;
+  height: 16.307px;   
+}
+
+.slack {
+  display: none;
+}
+
+.gg,
+.air,
+.fb,
+.hub,
+.slack img {
+  cursor: pointer;
+}
+
+.container {
+  width: 414px;
 }
 
 .product {
+  display: flex;
+  flex-direction: column;
   background-image: url(../../assets/image/bgintro.png);
-  background-repeat: round;
   justify-content: center;
   align-items: center;
-  gap: 74px;
-  height: 641px;
-  display: flex;
 }
 
 .timeline {
+  margin-top: 32px;
   border-radius: 4px;
-  width: 657px;
-  height: 518px;
-  margin-left: 4px;
+  width: 384px;
+  height: 303.094px;
+}
+
+.timeline img {
+  width: 100%;
+  height: 100%
 }
 
 .product__content {
-  flex-direction: column;
-  justify-content: center;
-  gap: 22px;
-  margin-left: 5px;
   display: flex;
-}
-
-.functions {
-  flex-direction: column;
-  justify-content: space-around;
-  align-items: center;
-  width: 1440px;
-  height: 648px;
-  margin: auto auto 52px;
-  display: flex;
-}
-
-h2 {
-  font-family: "Inter", sans-serif;
-  font-weight: 600;
-  font-size: 40px;
-  line-height: 40px;
-  color: var(--Limed-Spruce);
-  font-style: normal;
-}
-
-.functions__headline {
-  margin-top: 94px;
-  margin-right: 17px;
-}
-
-.charts {
-  background-image: url(../../assets/image/bgcharts.png);
-  justify-content: center;
-  align-items: center;
-  gap: 88px;
-  height: 541px;
-  display: flex;
-}
-
-.chart__content {
-  flex-direction: column;
-  gap: 25px;
-  margin-top: 2px;
-  margin-bottom: 5px;
-  margin-left: 14px;
-  display: flex;
-}
-
-.chart__content h2 {
-  text-align: left;
-  width: 341px;
-  height: 96px;
-  margin-left: -8px;
-  font-family: Inter, sans-serif;
-  font-size: 40px;
-  font-weight: 600;
-  line-height: 48px;
-}
-
-.chart__content p {
-  color: var(--River-Bed);
-  width: 413px;
-  height: 72px;
-  margin-left: -8px;
-  font-size: 16px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 24px;
-}
-
-.chart-button {
-  background-color: #796EFF;
-  color: var(--white);
-  cursor: pointer;
-  border: none;
-  border-radius: 4px;
-  width: 164px;
-  height: 52px;
-  margin-top: 5px;
-  margin-left: -8px;
-  padding-top: 4px;
-  padding-left: 0;
-  font-size: 16px;
-}
-
-.chart-image {
-  margin-top: 2px;
-  margin-right: 28px;
-}
-
-.about-us {
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
-  gap: 6px;
-  width: 100%;
-  height: 786px;
-  display: flex;
-}
-
-.about-us__content {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  gap: 50px;
-  margin-top: 60px;
-  display: flex;
 }
 
-.about-us__content h2 {
+.survey-feature p,
+.ad-feature p {
+    width: 308px;
+    color: var(--River-Bed);
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 24px;
+    font-family: "Inter", sans-serif;
+}
+
+.survey-feature {
+  background-color: #F6F3FC;
+  border-bottom: 8px solid var(--Violet);
+  width: 368px;
+  height: 128px;
+  margin-top: 20px;
+  border-radius: 8px 8px 0px 0px;
   text-align: center;
-  width: 394px;
-  height: 96px;
-  margin-top: 40px;
-  margin-right: 14px;
-  line-height: 48px;
 }
 
-.about-us__content p {
+.survey-feature h4,
+.ad-feature h4 {
+    font-size: 18px;
+    font-family: 'Inter', sans-serif;
+    font-weight: 600;
+    line-height: 26px;
+    margin-bottom: 1px;
+}
+
+.ad-feature {
   text-align: center;
-  width: 543px;
-  height: 96px;
-  margin-top: -2px;
-  margin-left: 15px;
-  font-size: 18px;
-  font-weight: 400;
-  line-height: 32px;
 }
 
-.install-section {
-  background-image: url(../../assets/image/install-section.png);
-  border-radius: 16px;
-  justify-content: space-around;
-  align-items: center;
-  width: 1111px;
-  height: 224px;
-  margin-right: 11px;
-  display: flex;
-}
 
-h3 {
-  color: var(--primary);
-  width: 423px;
-  height: 96px;
-  margin-top: 2px;
-  margin-left: 12px;
-  font-family: Inter, sans-serif;
-  font-size: 32px;
-  font-weight: 600;
-  line-height: 48px;
-}
 
-.install-app {
-  gap: 20px;
-  margin-right: 10px;
-  display: flex;
-}
 
-.app-store {
-  margin-left: 4px;
-}
 
-.app-store,
-.gg-play {
-  cursor: pointer;
-}
 
-.gg-play:hover,
-.app-store:hover {
-  transform: scale(1.1);
-}
-
-footer {
-  background-color: var(--Ebony-Clay);
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  height: 417px;
-  margin-top: 102px;
-  display: flex;
-}
-
-.footer__content {
-  flex-flow: row;
-  justify-content: space-evenly;
-  width: 1340px;
-  height: 280px;
-  margin-top: 82px;
-  margin-right: 90px;
-  display: flex;
-}
-
-.company ul,
-.support ul,
-.app ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-}
-
-.company ul li,
-.support ul li,
-.legal ul li {
-  padding-bottom: 23px;
-  width: 128px;
-  height: 16px;
-  cursor: pointer;
-  margin-left: 2px;
-}
-
-.company ul li a,
-.support ul li a,
-.legal ul li a {
-  text-decoration: none;
-  color: var(--primary);
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 16px;
-}
-
-.company,
-.support,
-.legal {
-  cursor: pointer;
-}
-
-.company {
-  margin-left: 15px;
-}
-
-.support {
-  margin-right: 18px;
-}
-
-.legal {
-  margin-right: 49px;
-}
-
-.app {
-  margin-right: 17px;
-}
-
-.footer__content p {
-  color: var(--primary);
-  margin-bottom: 24px;
-  font-family: Inter, sans-serif;
-  font-size: 16px;
-  font-weight: 600;
-  line-height: 16px;
-}
-
-.footer__install-app {
-  display: flex;
-  flex-direction: column;
-  gap: 10px;
-}
-
-.footer__gg-play {
-  margin-top: -2px;
-  cursor: pointer;
-}
-
-.footer__app-store {
-  display: flex;
-  cursor: pointer;
-}
-
-.footer__gg-play:hover,
-.footer__app-store:hover {
-  transform: scale(1.1);
-}
-
-.line-footer {
-  border: 0.1px solid var(--primary);
-  color: var(--primary);
-  opacity: 0.1;
-  width: 100%;
-  margin-top: 5px;
-}
-
-.footer__copy-right {
-  justify-content: space-around;
-  display: flex;
-}
-
-.copy-right {
-  color: #D9DBE1;
-  width: 577px;
-  height: 14px;
-  margin-top: 33px;
-  margin-left: 3px;
-  font-size: 15px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 14px;
-}
-
-.social-icon {
-  display: flex;
-  padding-bottom: 21px;
-  gap: 23px;
-  margin-right: 27px;
-  padding-top: 23px;
-  display: flex;
-}
-
-.icon {
-  cursor: pointer;
-}
-
-.banner__logo img,
-.timeline img,
-.customer-ava img {
-  width: 100%;
-  height: 100%;
-}/*# sourceMappingURL=index.css.map */
+/*# sourceMappingURL=index.css.map */
