--- a/Practice01/src/style/sass/layout/_banner.scss
+++ b/Practice01/src/style/sass/layout/_banner.scss
@@ -45,7 +45,8 @@
     margin-left: -15px; 
 }
 
-.banner__get-acc a {
+.banner__get-acc a,
+.banner__save p {
     font-family: Inter, sans-serif;
     font-size: 16px;
     font-style: normal;
@@ -168,7 +169,7 @@ input[type=text] {
     color: var(--River-Bed);
     letter-spacing: 0;
     margin-left: -10px;
-    font-family: Inter, sans-serif;
+    font-family: 'Inter', sans-serif;
     font-size: 16px;
     font-weight: 400;
     line-height: 16px;
