--- a/Practice01/src/style/sass/layout/chart-section.scss
+++ b/Practice01/src/style/sass/layout/chart-section.scss
@@ -28,6 +28,7 @@
 }
 
 .chart__content p {
+    font-family: 'Inter', sans-serif;
     color: var(--River-Bed);
     width: 413px;
     height: 72px;
@@ -40,7 +41,7 @@
 
 .chart-button {
     background-color: #796EFF;
-    color: var(--white);
+    color: var(--primary);
     cursor: pointer;
     border: none;
     border-radius: 4px;
