update practice 1 and practice 2

--- a/Practice02/src/style/main.css
+++ b/Practice02/src/style/main.css
@@ -1,13 +1,7 @@
+@import url("./base/reset.css");
+@import url("./base/typo.css");
+@import url("./abstracts/varibles.css");
 
-:root {
-  --primary: #FFF;
-  --second: #35414B; 
-  --black: #000;
-  --Ebony-Clay: #1D2830;
-  --Violet: #794CFF;
-  --River-Bed: #4E5A65;
-  --Perano: #B4AEF6;
-}
 
 body {
     color: var(--Limed-Spruce);
